# rust-shuttle-API

./: .gitignore  Cargo.toml  README.md  Shuttle.toml  deploy.yml  schema.sql
.github/workflows/: main.yml
migrations/: 20221203183355_schema.sql  schema.sql
src/: claims.rs  lib.rs  utils.rs
